--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,8 +31,8 @@ endorsed.classpath=\
     <<<<<<< HEAD
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.postgresql-9.1-901.jdbc3.jar=E:\\Archivos conexion a bd-20190708\\postgresql-9.1-901.jdbc3.jar
-file.reference.primefaces-7.0.jar=E:\\primefaces-7.0.jar
+file.reference.postgresql-42.2.9.jar=C:\\Documents and Settings\\Usuario\\Mis documentos\\Downloads\\postgresql-42.2.9.jar
+file.reference.primefaces-7.0.jar-1=C:\\Documents and Settings\\Usuario\\Mis documentos\\Downloads\\primefaces-7.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -112,9 +112,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-9.1-901.jdbc3.jar}:\
-    ${file.reference.primefaces-7.0.jar}:\
-    ${libs.javaee-api-7.0.classpath}
+    ${libs.javaee-api-7.0.classpath}:\
+    ${file.reference.primefaces-7.0.jar-1}:\
+    ${file.reference.postgresql-42.2.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
